recursion.cons.lessons.recursion.cons.Reverse.scala.error
reverse:4: error: value :: is not a member of Int
		return reverse(l.tail)::l.head
                                      ^reverse:3: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l != Nil){
        ^