recursion.cons.lessons.recursion.cons.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {

	if(l != Nil){
		return reverse(l.tail)::l.head
	}

}